--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <footer class="bg-[#659f8f] dark:bg-[#313131]">
-        <div class="container px-6 py-12 mx-auto">
+    <footer class="footer">
+        <div class="container">
+            <h2>Subscribe to our newsletter for updates.</h2>
+            <input type="email" placeholder="Email Address" class="email-input">
+            <button class="subscribe-button">Subscribe</button>
+        <div class="quick-links">
+            <h3>Quick Links</h3>
+                <ul>
+                    <li>home</li>
+                    <li>Who We Are</li>
+                    <li>Our Philosophy</li>
+                </ul>
+        <div class="Technologies">
+            <h3>Technologies</h3>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+        </div>
+        
+        </div>
+        <div>
+            <diveder class="footer-divider"></div>
+        </div>
             <div class="flex">
                 <a href="#">
                     <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
