updated the element format of Index html
removed class for input
removed class for button
changed footer class
changes div class
correctly linked my CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -3,41 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Stylesheet.css">
     <title>Footer</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <footer class="footer">
-        <div class="container">
-            <h2>Subscribe to our newsletter for updates.</h2>
-            <input type="email" placeholder="Email Address" class="email-input">
-            <button class="subscribe-button">Subscribe</button>
-        <div class="quick-links">
-            <h3>Quick Links</h3>
-                <ul>
-                    <li>home</li>
-                    <li>Who We Are</li>
-                    <li>Our Philosophy</li>
-                </ul>
-        <div class="Technologies">
-            <h3>Technologies</h3>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
-        </div>
-        
-        </div>
-        <div>
-            <diveder class="footer-divider"></div>
-        </div>
-            <div class="flex">
+  <footer class="footer">
+    <div class="newsletter">
+      <h2>Subscribe to our newsletter for updates.</h2>
+      <input type="email" placeholder="Email Address">
+      <button>Subscribe</button>
+    </div>
+    <div class="links">
+      <h3>Quick Link</h3>
+      <ul>
+        <li>Home</li>
+        <li>Who We Are</li>
+        <li>Our Philosophy</li>
+      </ul>
+    </div>
+    <div class="links">
+      <h3>Technologies</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+      </ul>
+    </div>
+    <div class="divider"></div>
                 <a href="#">
                     <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
                 </a>
             </div>
-        </div>
     </footer>
 </body>
 </html>
