--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="divider"></div>
                 <a href="#">
-                    <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
+                    <img class="Logo" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
                 </a>
             </div>
     </footer>
